@@ -1,5 +1,7 @@
 2010-07-24  Tolleiv Nietsch <nietsch@aoemedia.de>
 
+	* Fixed issue: #14140: TemplaVoila should use sprite icons / pt.2
+	* Follow-up to: #15210: TemplaVoila should adjust it's look&feel to TYPO3 4.4 - typo/whitespacefix
 	* Fixed issue: #14140: TemplaVoila should use sprite icons / pt.1
 
 2010-07-23  Tolleiv Nietsch <nietsch@aoemedia.de>
